--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <header>
+        <a href="index.html"><img width="48" height="48" src="https://img.icons8.com/color/48/saturn-planet.png" alt="saturn-planet"/></a>
         <h2 class="about">about</h2>
         <h2 class="portfolio_">Portfolio</h2>
         <h2 class="contact">Contact</h2>
@@ -20,5 +21,6 @@
 <h1 class="first-name">Tacchi Antonin</h1>
 <h1 class="web-dev">Web Developper, Designer</h1>
     </div>
+    <img class="Meteor-Falling-PNG" src="image/Meteor-Falling-PNG.png" alt="Meteor-Falling-PNG">
 </body>
 </html>
