add part of portfolio

--- a/index.html
+++ b/index.html
@@ -13,14 +13,39 @@
 <body>
     <header>
         <a href="index.html"><img width="48" height="48" src="https://img.icons8.com/color/48/saturn-planet.png" alt="saturn-planet"/></a>
-        <h2 class="about">about</h2>
-        <h2 class="portfolio_">Portfolio</h2>
-        <h2 class="contact">Contact</h2>
+        <a href="#about"><h2 class="about">About</h2></a>
+        <a href="#portfolio"><h2 class="portfolio_">Portfolio</h2></a>
+        <a href="#Contact-"><h2 class="contact">Contact</h2></a>
     </header>
     <div class="banner">
 <h1 class="first-name">Tacchi Antonin</h1>
-<h1 class="web-dev">Web Developper, Designer</h1>
+<h1 class="web-dev">Dévelloppeur web, Designer</h1>
+<h2 class="about_" id="about"><u>A propos de moi:</u></h2>
+<h3 class="description">
+    Bonjour à tous,
+    Je m'appelle Antonin, et je suis développeur web. Passionné par les technologies numériques et le monde du développement, je me spécialise dans la création de sites web modernes, interactifs et performants.
+    Je vis en France, un pays riche en histoire et en innovation, ce qui m'inspire au quotidien dans mon métier. Toujours à la recherche de nouveaux défis, je suis curieux d'apprendre les dernières tendances technologiques, que ce soit dans le domaine du front-end, du back-end ou des solutions complètes.
+    Au-delà de ma passion pour le code, j'aime aussi explorer d'autres univers : je suis un grand amateur de design graphique, de photographie et de jeux vidéo. Ces intérêts m'aident à cultiver une approche créative dans mes projets professionnels.
+    Vous pouvez me retrouver sur mes réseaux ou via mon portfolio, où je partage mes réalisations et mes projets en cours. N'hésitez pas à me contacter si vous voulez collaborer ou simplement échanger des idées.</h3>
     </div>
+<h2 id="portfolio" class="portfolio"><u>Portfolio:</u></h2>
+<h3 class="fan-site">Fans-site sur Nekfeu</h3>
+<div class="index-nekfeu-text">
+<img class="index-nekfeu" src="image/Capture d'écran 2024-11-19 131124.png" alt="">
+<h3 class="text-nekfeu">Durant ce projet j'ai créer une page réalisation avec ses albums. La présentation de ses albums
+    est faites avec ses sons qui apparaissent quand on passe la sourit sur l'album, deplus
+    quand on clique dessus cela nous redirige vers la page de l'album sur spotify.
+</h3>
+</div>
+<div class="realisation-nekfeu-text">
+<h3 class="text-real">Pour cette page la, j'ai fais une sorte de menu déroulant qui montre les albums de nekfeu quand on passe 
+    la souris de par dessus, et quand on clique dessus cela nous redirige vers la page spotify de l'album en en question.
+</h3>
+<img class="realisation-nekfeu" src="image/Capture d'écran 2024-11-19 131046.png" alt="">
+</div>
+<h2 id="Contact-" class="contact_"><u>Contact:</u></h2>
+
+
     <img class="Meteor-Falling-PNG" src="image/Meteor-Falling-PNG.png" alt="Meteor-Falling-PNG">
 </body>
 </html>
