--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,42 +11,91 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
     <title>Portfolio</title>
 </head>
+
 <body>
     <header>
-        <a href="index.html"><img width="48" height="48" src="https://img.icons8.com/color/48/saturn-planet.png" alt="saturn-planet"/></a>
-        <a href="#about"><h2 class="about">About</h2></a>
-        <a href="#portfolio"><h2 class="portfolio_">Portfolio</h2></a>
-        <a href="#Contact-"><h2 class="contact">Contact</h2></a>
+        <a href="index.html"><img width="48" height="48" src="https://img.icons8.com/color/48/saturn-planet.png"
+                alt="saturn-planet" /></a>
+        <a href="#about">
+            <h2 class="about">About</h2>
+        </a>
+        <a href="#portfolio">
+            <h2 class="portfolio_">Portfolio</h2>
+        </a>
+        <a href="#Contact-">
+            <h2 class="contact">Contact</h2>
+        </a>
     </header>
     <div class="banner">
-<h1 class="first-name">Tacchi Antonin</h1>
-<h1 class="web-dev">Dévelloppeur web, Designer</h1>
-<h2 class="about_" id="about"><u>A propos de moi:</u></h2>
-<h3 class="description">
-    Bonjour à tous,
-    Je m'appelle Antonin, et je suis développeur web. Passionné par les technologies numériques et le monde du développement, je me spécialise dans la création de sites web modernes, interactifs et performants.
-    Je vis en France, un pays riche en histoire et en innovation, ce qui m'inspire au quotidien dans mon métier. Toujours à la recherche de nouveaux défis, je suis curieux d'apprendre les dernières tendances technologiques, que ce soit dans le domaine du front-end, du back-end ou des solutions complètes.
-    Au-delà de ma passion pour le code, j'aime aussi explorer d'autres univers : je suis un grand amateur de design graphique, de photographie et de jeux vidéo. Ces intérêts m'aident à cultiver une approche créative dans mes projets professionnels.
-    Vous pouvez me retrouver sur mes réseaux ou via mon portfolio, où je partage mes réalisations et mes projets en cours. N'hésitez pas à me contacter si vous voulez collaborer ou simplement échanger des idées.</h3>
+        <h1 class="first-name">Tacchi Antonin</h1>
+        <h1 class="web-dev">Dévelloppeur web, Designer</h1>
+        <h2 class="about_" id="about"><u>A propos de moi:</u></h2>
+        <h3 class="description">
+            Bonjour à tous,
+            Je m'appelle Antonin, et je suis développeur web. Passionné par les technologies numériques et le monde du
+            développement, je me spécialise dans la création de sites web modernes, interactifs et performants.
+            Je vis en France, un pays riche en histoire et en innovation, ce qui m'inspire au quotidien dans mon métier.
+            Toujours à la recherche de nouveaux défis, je suis curieux d'apprendre les dernières tendances
+            technologiques, que ce soit dans le domaine du front-end, du back-end ou des solutions complètes.
+            Au-delà de ma passion pour le code, j'aime aussi explorer d'autres univers : je suis un grand amateur de
+            design graphique, de photographie et de jeux vidéo. Ces intérêts m'aident à cultiver une approche créative
+            dans mes projets professionnels.
+            Vous pouvez me retrouver sur mes réseaux ou via mon portfolio, où je partage mes réalisations et mes projets
+            en cours. N'hésitez pas à me contacter si vous voulez collaborer ou simplement échanger des idées.</h3>
     </div>
-<h2 id="portfolio" class="portfolio"><u>Portfolio:</u></h2>
-<h3 class="fan-site">Fans-site sur Nekfeu</h3>
-<div class="index-nekfeu-text">
-<img class="index-nekfeu" src="image/Capture d'écran 2024-11-19 131124.png" alt="">
-<h3 class="text-nekfeu">Durant ce projet j'ai créer une page réalisation avec ses albums. La présentation de ses albums
-    est faites avec ses sons qui apparaissent quand on passe la sourit sur l'album, deplus
-    quand on clique dessus cela nous redirige vers la page de l'album sur spotify.
-</h3>
-</div>
-<div class="realisation-nekfeu-text">
-<h3 class="text-real">Pour cette page la, j'ai fais une sorte de menu déroulant qui montre les albums de nekfeu quand on passe 
-    la souris de par dessus, et quand on clique dessus cela nous redirige vers la page spotify de l'album en en question.
-</h3>
-<img class="realisation-nekfeu" src="image/Capture d'écran 2024-11-19 131046.png" alt="">
-</div>
-<h2 id="Contact-" class="contact_"><u>Contact:</u></h2>
+    <h2 id="portfolio" class="portfolio"><u>Portfolio:</u></h2>
+    <h3 class="fan-site">Fans-site sur Nekfeu</h3>
+    <div class="table_nekfeu">
+        <div class="index-nekfeu-text">
+            <img class="index-nekfeu" src="image/Capture d'écran 2024-11-19 131124.png" alt="">
+            <h3 class="text-nekfeu">Durant ce projet j'ai créer une page réalisation avec ses albums. La présentation de
+                ses albums
+                est faites avec ses sons qui apparaissent quand on passe la sourit sur l'album, deplus
+                quand on clique dessus cela nous redirige vers la page de l'album sur spotify.
+            </h3>
+        </div>
+        <div class="realisation-nekfeu-text">
+            <h3 class="text-real">Pour cette page la, j'ai fais une sorte de menu déroulant qui montre les albums de
+                nekfeu quand on passe
+                la souris de par dessus, et quand on clique dessus cela nous redirige vers la page spotify de l'album en
+                en question.
+            </h3>
+            <img class="realisation-nekfeu" src="image/Capture d'écran 2024-11-19 131046.png" alt="">
+        </div>
+    </div>
 
+    <!-- CONTACT CONTENT -->
+    <div class="contact-content">
+        <h2 id="Contact-" class="contact_"><u>Contact:</u></h2>
+        <div class="contact-row">
+            <div class="icon-content">
+                <a href="https://www.linkedin.com/in/antonin-tacchi-4b7b32338/" target="_blank">
+                    <img class="gmail" src="image/logo_linkedin-removebg-preview.png" alt="">
+                    <h3>LinkedIn</h3>
+                </a>
+            </div>
+            <!-- GITHUB -->
+            <div class="icon-content">
+                <a href="https://github.com/antonin-tacchi" target="_blank">
+                    <img class="gmail" src="image/logo_github-removebg-preview.png" alt="">
+                    <h3>Gitub</h3>
+                </a>
+            </div>
+            <!-- GMAIL -->
+            <div class="icon-content">
+                <a href="https://mail.google.com/mail/u/2/?pli=1#inbox?compose=jrjtXPVFZGFdTmZQNjrCDKcLBkZmkHKnFdCqMhtrptXMxdRPvHPRGXqnmhFcknhHcfVKtgKk"
+                    target="_blank">
+                    <img class="gmail" src="image/gmail_logo_PNG9.webp" alt="">
+                    <h3 class="email">antonin.tacchi2005@gmail.com</h3>
+                </a>
+            </div>
+        </div>
+    </div>
 
     <img class="Meteor-Falling-PNG" src="image/Meteor-Falling-PNG.png" alt="Meteor-Falling-PNG">
+    <footer>
+        <h3 class="copyright">©2024 Tacchi Antonin©</h3>
+    </footer>
 </body>
+
 </html>
