--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
 
 <body>
     <header>
-        <a href="index.html"><img width="48" height="48" src="https://img.icons8.com/color/48/saturn-planet.png"
-                alt="saturn-planet" /></a>
         <a href="#about">
             <h2 class="about">About</h2>
         </a>
@@ -24,6 +22,9 @@
         </a>
         <a href="#Contact-">
             <h2 class="contact">Contact</h2>
+        </a>
+        <a href="3D.html">
+            <h2 class="modelisation">Modélisation 3D</h2>
         </a>
     </header>
     <div class="banner">
