--- a/3D.html
+++ b/3D.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,17 +9,52 @@
     <title>Modélisation 3D</title>
 </head>
 <header>
-        <a href="index.html">
-            <h2 class="acceuil">Acceuil</h2>
-        </a>
+    <a href="index.html">
+        <h2 class="acceuil">Acceuil</h2>
+    </a>
     <a href="3D">
         <h2 class="modelisation">Modélisation 3D</h2>
     </a>
 </header>
-<body>
-<h1>Voici quelques une des modélisations 3D que j'ai réalisé : </h1>
-<video class="video-pont" src="image/pont0001-0250.mp4" controls poster="image/PON.jpg" autoplay="True">
-<h2>Montagne avec chemin de fer</h2>
 
+<body>
+    <h1>Voici quelques une des modélisations 3D que j'ai réalisé : </h1>
+    <h2 class="modelisation-sous-titre">Une chambre</h2>
+    <div class="chambre-div">
+        <img class="chambre" src="image/chambre.png">
+        <img class="chambre" src="image/chambre2.png" alt="">
+    </div>
+    <div class="anime-salle">
+        <div class="sketchfab-embed-wrapper"> <iframe title="Chambre" frameborder="0" allowfullscreen
+                mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking"
+                xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share width="1000"
+                height="600" src="https://sketchfab.com/models/1ae8d20da4ec415eac21c4752e53d4ca/embed"> </iframe>
+            <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> <a
+                    href="https://sketchfab.com/3d-models/chambre-1ae8d20da4ec415eac21c4752e53d4ca?utm_medium=embed&utm_campaign=share-popup&utm_content=1ae8d20da4ec415eac21c4752e53d4ca"
+                    target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> </a><a
+                    href="https://sketchfab.com/CapitainLicorne_?utm_medium=embed&utm_campaign=share-popup&utm_content=1ae8d20da4ec415eac21c4752e53d4ca"
+                    target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"></a>
+                <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=1ae8d20da4ec415eac21c4752e53d4ca"
+                    target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"></a></p>
+        </div>
+    </div>
+    <h2>Salle de cours</h2>
+    <div class="anime-salle">
+        <div class="sketchfab-embed-wrapper"> <iframe title="Salle" frameborder="0" allowfullscreen
+                mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking"
+                xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share width="1000"
+                height="600" src="https://sketchfab.com/models/3367c61df3104642aef0122093172117/embed"> </iframe>
+            <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"><a
+                    href="https://sketchfab.com/3d-models/salle-3367c61df3104642aef0122093172117?utm_medium=embed&utm_campaign=share-popup&utm_content=3367c61df3104642aef0122093172117"
+                    target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"></a><a
+                    href="https://sketchfab.com/CapitainLicorne_?utm_medium=embed&utm_campaign=share-popup&utm_content=3367c61df3104642aef0122093172117"
+                    target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"></a> 
+                <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=3367c61df3104642aef0122093172117"
+                    target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"></a></p>
+        </div>
+    </div>
+    <h2 class="modelisation-sous-titre">Une montagne traversée par un chemin de fer</h2>
+    <video class="video-pont" src="image/pont0001-0250.mp4" controls poster="image/PON.jpg">
 </body>
+
 </html>
