--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <a href="#Contact-">
             <h2 class="contact">Contact</h2>
         </a>
-        <a href="3D.html">
-            <h2 class="modelisation">Modélisation 3D</h2>
-        </a>
+        <!-- <a href="3D.html">
+            <h2 class="modelsation">Modélisation 3D</h2>i
+        </a> -->
     </header>
     <div class="banner">
         <h1 class="first-name">Tacchi Antonin</h1>
@@ -33,16 +33,21 @@
         <h2 class="about_" id="about"><u>A propos de moi:</u></h2>
         <h3 class="description">
             Bonjour à tous,
-            Je m'appelle Antonin, et je suis développeur web. Passionné par les technologies numériques et le monde du
-            développement, je me spécialise dans la création de sites web modernes, interactifs et performants.
-            Je vis en France, un pays riche en histoire et en innovation, ce qui m'inspire au quotidien dans mon métier.
-            Toujours à la recherche de nouveaux défis, je suis curieux d'apprendre les dernières tendances
-            technologiques, que ce soit dans le domaine du front-end, du back-end ou des solutions complètes.
-            Au-delà de ma passion pour le code, j'aime aussi explorer d'autres univers : je suis un grand amateur de
-            design graphique, de photographie et de jeux vidéo. Ces intérêts m'aident à cultiver une approche créative
-            dans mes projets professionnels.
-            Vous pouvez me retrouver sur mes réseaux ou via mon portfolio, où je partage mes réalisations et mes projets
-            en cours. N'hésitez pas à me contacter si vous voulez collaborer ou simplement échanger des idées.</h3>
+            Je m'appelle Antonin, et je suis développeur web. Passionné par les technologies numériques et
+            le monde du développement, je me spécialise dans la création de sites web modernes, interactifs
+            et performants. Je vis en France, un pays riche en histoire et en innovation, 
+            ce qui m'inspire au quotidien dans mon métier.
+            Toujours à la recherche de nouveaux défis, je suis curieux d'apprendre les dernières 
+            tendances technologiques, que ce soit dans le domaine du front-end, du back-end ou des 
+            solutions complètes. En plus de mes compétences en développement, je pratique également 
+            la modélisation 3D. Vous pouvez retrouver des exemples de mes travaux de 
+            modélisation sur une autre <a class="modelisation_lien" href="3D.html">page dédiée</a>.
+            Au-delà de ma passion pour le code, j'aime aussi explorer d'autres univers : 
+            je suis un grand amateur de design graphique, de photographie et de jeux vidéo. 
+            Ces intérêts m'aident à cultiver une approche créative dans mes projets professionnels.
+            Vous pouvez me retrouver sur mes réseaux ou via mon portfolio, où je partage mes 
+            réalisations et mes projets en cours. N'hésitez pas à me contacter si vous voulez 
+            collaborer ou simplement échanger des idées.</h3>
     </div>
     <h2 id="portfolio" class="portfolio"><u>Portfolio:</u></h2>
     <h3 class="fan-site">Fans-site sur Nekfeu</h3>
