ajout d'image pour la salle de cours et centrage des image

--- a/3D.html
+++ b/3D.html
@@ -18,7 +18,7 @@
 </header>
 
 <body>
-    <h1>Voici quelques une des modélisations 3D que j'ai réalisé : </h1>
+    <h1 class="titre-modelisation">Voici quelques une des modélisations 3D que j'ai réalisé : </h1>
     <h2 class="modelisation-sous-titre">Une chambre</h2>
     <div class="chambre-div">
         <img class="chambre" src="image/chambre.png">
@@ -38,7 +38,11 @@
                     target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"></a></p>
         </div>
     </div>
-    <h2>Salle de cours</h2>
+    <h2 class="titre-salle">Salle de cours</h2>
+    <div class="div-salle">
+        <img class="salle" src="image/salle.png" alt="">
+        <img class="salle" src="image/salle2.png" alt="">
+    </div>
     <div class="anime-salle">
         <div class="sketchfab-embed-wrapper"> <iframe title="Salle" frameborder="0" allowfullscreen
                 mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking"
