ajout d'un footer sur la page 3D.html et bloquage de la position du header sur toutes les pages

--- a/3D.html
+++ b/3D.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Modélisation 3D</title>
 </head>
-<header>
+<header class="header">
     <a href="index.html">
         <h2 class="acceuil">Acceuil</h2>
     </a>
@@ -69,6 +69,9 @@
         <h2 class="modelisation-sous-titre">Une montagne traversée par un chemin de fer</h2>
         <video class="video-pont" src="image/pont0001-0250.mp4" controls poster="image/PON.jpg">
     </div>
+    <footer class="footer">
+        <h3 class="copyright">©2024 Tacchi Antonin©</h3>
+    </footer>
 </body>
 
 </html>
