changement de la couleur du footer et du header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <a href="#about">
-            <h2 class="about">About</h2>
+            <h2 class="about">A-propos</h2>
         </a>
         <a href="#portfolio">
             <h2 class="portfolio_">Portfolio</h2>
@@ -23,14 +23,11 @@
         <a href="#Contact-">
             <h2 class="contact">Contact</h2>
         </a>
-        <!-- <a href="3D.html">
-            <h2 class="modelsation">Modélisation 3D</h2>i
-        </a> -->
     </header>
     <div class="banner">
         <h1 class="first-name">Tacchi Antonin</h1>
         <h1 class="web-dev">Dévelloppeur web, Designer</h1>
-        <h2 class="about_" id="about"><u>A propos de moi:</u></h2>
+        <h2 class="about_" id="about"><u>A-propos de moi:</u></h2>
         <h3 class="description">
             Bonjour à tous,
             Je m'appelle Antonin, et je suis développeur web. Passionné par les technologies numériques et
