--- a/3D.html
+++ b/3D.html
@@ -73,5 +73,6 @@
         <h3 class="copyright">©2024 Tacchi Antonin©</h3>
     </footer>
 </body>
-
+<!-- lien de la palette de couleur -->
+<!-- https://coolors.co/palette/03045e-023e8a-0077b6-0096c7-00b4d8-48cae4-90e0ef-ade8f4-caf0f8 -->
 </html>
