changement de la ligne sous le prenom

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     <div class="banner">
         <h1 class="first-name">Tacchi Antonin</h1>
-        <h1 class="web-dev">Dévelloppeur web, Designer</h1>
+        <h1 class="web-dev">Dévelloppeur / Designer web</h1>
         <div class="text-apropos">
             <h2 class="about_" id="about"><u>A-propos de moi:</u></h2>
             <h3 class="description">
