--- a/3D.html
+++ b/3D.html
@@ -1,78 +1,172 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="link.css">
-    <link rel="stylesheet" href="style.css">
-    <title>Modélisation 3D</title>
+    <title>CosmoDev Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<header class="header">
-    <a href="index.html">
-        <h2 class="acceuil">Acceuil</h2>
-    </a>
-    <a href="3D">
-        <h2 class="modelisation">Modélisation 3D</h2>
-    </a>
-</header>
-
 <body>
-    <h1 class="titre-modelisation">Voici quelques une des modélisations 3D que j'ai réalisé : </h1>
-    <div class="chambre-div-2">
-        <h2 class="modelisation-sous-titre">Une chambre</h2>
-        <div class="chambre-div">
-            <img class="chambre" src="image/chambre.png">
-            <img class="chambre" src="image/chambre2.png" alt="">
-        </div>
-        <div class="anime-salle">
-            <div class="sketchfab-embed-wrapper"> <iframe title="Chambre" frameborder="0" allowfullscreen
-                    mozallowfullscreen="true" webkitallowfullscreen="true"
-                    allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking
-                    execution-while-out-of-viewport execution-while-not-rendered web-share width="1000" height="600"
-                    src="https://sketchfab.com/models/1ae8d20da4ec415eac21c4752e53d4ca/embed"> </iframe>
-                <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> <a
-                        href="https://sketchfab.com/3d-models/chambre-1ae8d20da4ec415eac21c4752e53d4ca?utm_medium=embed&utm_campaign=share-popup&utm_content=1ae8d20da4ec415eac21c4752e53d4ca"
-                        target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> </a><a
-                        href="https://sketchfab.com/CapitainLicorne_?utm_medium=embed&utm_campaign=share-popup&utm_content=1ae8d20da4ec415eac21c4752e53d4ca"
-                        target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"></a>
-                    <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=1ae8d20da4ec415eac21c4752e53d4ca"
-                        target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"></a>
-                </p>
+    <div class="hero-section">
+        <div class="hero-content">
+            <div class="hero-background">
+                <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/fd1b62fa49c96595a8e943187b01e0c933e3aa74fee5a818536eee8e19837150?placeholderIfAbsent=true&apiKey=c02be817a8ce4cc498da11a30bb2f2c4" alt="Thème spatial en arrière-plan" class="hero-image">
+                <nav class="nav-container" aria-label="Navigation principale">
+                    <div class="nav-wrapper">
+                        <div class="nav-content">
+                            <div class="brand-name">
+                                <span class="brand-name-light">Cosmo</span>
+                                <span class="brand-name-accent">Dev</span>
+                            </div>
+                            <div class="nav-links">
+                                <a href="#accueil" class="nav-link">Accueil</a>
+                                <a href="#projets" class="nav-link">Projets</a>
+                                <a href="#contact" class="nav-link">Contact</a>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
+                <div class="hero-text-container">
+                    <div class="hero-text-wrapper">
+                        <h1 class="hero-heading">
+                            <span class="hero-heading-light">TACCHI </span>
+                            <span class="hero-heading-accent">Antonin</span>
+                        </h1>
+                        <p class="hero-subheading">Développeur full-stack créant des expériences web stellaires</p>
+                        <div class="hero-buttons">
+                            <a href="index.html"><button class="primary-button">Voir Mes Travaux WEB</button></a>
+                            <a href="#contact" class="nav-link"><button class="secondary-button">Me Contacter</button></a>
+                        </div>
+                    </div>
+                </div>
             </div>
+
+            <section id="projets" class="projects-section">
+                <div class="projects-container">
+                    <h2 class="section-heading">
+                        <span class="section-heading-light">Projets </span>
+                        <span class="section-heading-accent">Vedettes</span>
+                    </h2>
+                    <div class="projects-grid">
+                        <article class="project-card">
+                            <img src="asset/chambre.png" alt="Aperçu d'une chambre modélisé en 3D" class="project-image">
+                            <div class="project-content">
+                                <h3 class="project-title">Chambre</h3>
+                                <p class="project-description">Une modélisation d'une chambre en 3D </p>
+                                <div class="project-tags">
+                                    <span class="project-tag">Blender</span>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="project-card">
+                            <img src="asset/PON.jpg" alt="Aperçu d'une modélisation 3D d'une montagne traverser par un chemain de fer" class="project-image">
+                            <div class="project-content">
+                                <h3 class="project-title">Montagne</h3>
+                                <p class="project-description">Modélisation 3D d'une montagne traversé par un chemain de fer</p>
+                                <div class="project-tags">
+                                    <span class="project-tag">Blender</span>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="project-card">
+                            <img src="asset/salle.png" alt="Aperçu d'une modélisation 3D d'une salle de cours" class="project-image">
+                            <div class="project-content">
+                                <h3 class="project-title">Salle</h3>
+                                <p class="project-description">Modélisation 3D d'une salle de cours</p>
+                                <div class="project-tags">
+                                    <span class="project-tag">Blender</span>
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </section>
+
+            <!-- <section id="competences" class="skills-section">
+                <div class="skills-container">
+                    <h2 class="section-heading">
+                        <span class="section-heading-light">Compétences </span>
+                        <span class="section-heading-accent">Techniques</span>
+                    </h2>
+                    <div class="skills-grid">
+                        <div class="skill-category">
+                            <h3 class="category-title">Frontend</h3>
+                            <ul class="skills-list">
+                                <li>React.js</li>
+                                <li>Vue.js</li>
+                                <li>Tailwind CSS</li>
+                                <li>JavaScript/TypeScript</li>
+                            </ul>
+                        </div>
+                        <div class="skill-category">
+                            <h3 class="category-title">Backend</h3>
+                            <ul class="skills-list">
+                                <li>Node.js</li>
+                                <li>Express</li>
+                                <li>Python</li>
+                                <li>PHP</li>
+                            </ul>
+                        </div>
+                        <div class="skill-category">
+                            <h3 class="category-title">Base de données</h3>
+                            <ul class="skills-list">
+                                <li>MongoDB</li>
+                                <li>PostgreSQL</li>
+                                <li>MySQL</li>
+                                <li>Redis</li>
+                            </ul>
+                        </div>
+                        <div class="skill-category">
+                            <h3 class="category-title">DevOps</h3>
+                            <ul class="skills-list">
+                                <li>Docker</li>
+                                <li>AWS</li>
+                                <li>CI/CD</li>
+                                <li>Git</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </section> -->
+
+            <section id="contact" class="contact-section">
+                <div class="contact-container">
+                    <div class="contact-content">
+                        <h2 class="section-heading">
+                            <span class="section-heading-light">Restons en </span>
+                            <span class="section-heading-accent">Contact</span>
+                        </h2>
+                        <div class="contact-form-container">
+                            <form class="contact-form">
+                                <div class="form-group">
+                                    <label for="name" class="form-label">Nom</label>
+                                    <input type="text" id="name" name="name" class="form-input" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="email" class="form-label">Email</label>
+                                    <input type="email" id="email" name="email" class="form-input" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="message" class="form-label">Message</label>
+                                    <textarea id="message" name="message" class="form-textarea" required></textarea>
+                                </div>
+                                <button type="submit" class="submit-button">Envoyer le Message</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <footer class="footer">
+                <div class="footer-container">
+                    <div class="footer-content">
+                        <p>© 2025 CosmoDev. Tous droits réservés.</p>
+                        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/da31e14d76b64a250f527ba04418acfb7930616f2709f7e4a89946a8706fbf54?placeholderIfAbsent=true&apiKey=c02be817a8ce4cc498da11a30bb2f2c4" alt="Logo CosmoDev" class="footer-logo">
+                    </div>
+                </div>
+            </footer>
         </div>
     </div>
-    <div class="salle-div-2">
-        <h2 class="titre-salle">Salle de cours</h2>
-        <div class="div-salle">
-            <img class="salle" src="image/salle.png" alt="">
-            <img class="salle" src="image/salle2.png" alt="">
-        </div>
-        <div class="anime-salle">
-            <div class="sketchfab-embed-wrapper"> <iframe title="Salle" frameborder="0" allowfullscreen
-                    mozallowfullscreen="true" webkitallowfullscreen="true"
-                    allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking
-                    execution-while-out-of-viewport execution-while-not-rendered web-share width="1000" height="600"
-                    src="https://sketchfab.com/models/3367c61df3104642aef0122093172117/embed"> </iframe>
-                <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"><a
-                        href="https://sketchfab.com/3d-models/salle-3367c61df3104642aef0122093172117?utm_medium=embed&utm_campaign=share-popup&utm_content=3367c61df3104642aef0122093172117"
-                        target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"></a><a
-                        href="https://sketchfab.com/CapitainLicorne_?utm_medium=embed&utm_campaign=share-popup&utm_content=3367c61df3104642aef0122093172117"
-                        target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"></a>
-                    <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=3367c61df3104642aef0122093172117"
-                        target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"></a>
-                </p>
-            </div>
-        </div>
-    </div>
-    <div class="sous-titre">
-        <h2 class="modelisation-sous-titre">Une montagne traversée par un chemin de fer</h2>
-        <video class="video-pont" src="image/pont0001-0250.mp4" controls poster="image/PON.jpg">
-    </div>
-    <footer class="footer">
-        <h3 class="copyright">©2024 Tacchi Antonin©</h3>
-    </footer>
 </body>
-<!-- lien de la palette de couleur -->
-<!-- https://coolors.co/palette/03045e-023e8a-0077b6-0096c7-00b4d8-48cae4-90e0ef-ade8f4-caf0f8 -->
 </html>
