ajout d'un projet dev sur la page d'acceuil

--- a/index.html
+++ b/index.html
@@ -61,18 +61,19 @@
                                 </div>
                             </div>
                         </article>
-                        <!-- <article class="project-card">
-                            <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/0569c975259b34fc63c4b096900ea6ae4ddc5858507c5a5cf0b2ba7907696bee?placeholderIfAbsent=true&apiKey=c02be817a8ce4cc498da11a30bb2f2c4" alt="Aperçu de la plateforme Nebula Commerce" class="project-image">
+                        <article class="project-card">
+                            <img src="asset/projet-restauration.png" alt="Aperçu de la plateforme Nebula Commerce" class="project-image">
                             <div class="project-content">
-                                <h3 class="project-title">Nebula Commerce</h3>
-                                <p class="project-description">Plateforme e-commerce avec une expérience utilisateur fluide</p>
+                                <h3 class="project-title">Gestion Restauration</h3>
+                                <p class="project-description">Plateforme de gestion administratif pour un restaurant avec une expérience administrateur fluide</p>
                                 <div class="project-tags">
                                     <span class="project-tag">HTML</span>
                                     <span class="project-tag">CSS</span>
+                                    <span class="project-tag">PHP</span>
                                     <span class="project-tag">SQL</span>
                                 </div>
                             </div>
-                        </article> -->
+                        </article>
                     </div>
                 </div>
             </section>
