modification des projets dans la page index et modification du footer de la page 3D

--- a/index.html
+++ b/index.html
@@ -50,30 +50,39 @@
                         <span class="section-heading-accent">Vedettes</span>
                     </h2>
                     <div class="projects-grid">
-                        <article class="project-card">
-                            <img src="asset/page-acceuil-nekfeu.png" alt="page d'acceuil d'un fan-site sur nekfeu" class="project-image">
-                            <div class="project-content">
-                                <h3 class="project-title">Fan-Site</h3>
-                                <p class="project-description">Un fan-site sur une personnalité connue du grand publique</p>
-                                <div class="project-tags">
-                                    <span class="project-tag">HTML</span>
-                                    <span class="project-tag">CSS</span>
+
+                        
+                        <a href="https://github.com/antonin-tacchi/projet-site-restauration" target="_blank">
+                            <article class="project-card">
+                                <img src="asset/projet-restauration.png" alt="Aperçu de la plateforme Nebula Commerce" class="project-image">
+                                <div class="project-content">
+                                    <h3 class="project-title">Gestion Restauration</h3>
+                                    <p class="project-description">Plateforme de gestion administratif pour un restaurant avec une expérience administrateur fluide</p>
+                                    <div class="project-tags">
+                                        <span class="project-tag">HTML</span>
+                                        <span class="project-tag">CSS</span>
+                                        <span class="project-tag">PHP</span>
+                                        <span class="project-tag">SQL</span>
+                                    </div>
                                 </div>
-                            </div>
-                        </article>
-                        <article class="project-card">
-                            <img src="asset/projet-restauration.png" alt="Aperçu de la plateforme Nebula Commerce" class="project-image">
-                            <div class="project-content">
-                                <h3 class="project-title">Gestion Restauration</h3>
-                                <p class="project-description">Plateforme de gestion administratif pour un restaurant avec une expérience administrateur fluide</p>
-                                <div class="project-tags">
-                                    <span class="project-tag">HTML</span>
-                                    <span class="project-tag">CSS</span>
-                                    <span class="project-tag">PHP</span>
-                                    <span class="project-tag">SQL</span>
+                            </article>
+                        </a>
+
+                        <a href="https://github.com/antonin-tacchi/livre-or/tree/main" target="_blank">
+                            <article class="project-card">
+                                <img src="asset/livre-or.png" alt="page d'acceuil d'un fan-site sur nekfeu" class="project-image">
+                                <div class="project-content">
+                                    <h3 class="project-title">Livre d'or</h3>
+                                    <p class="project-description">Un livre d'or permettant de laisser des commentaire sur une personne.</p>
+                                    <div class="project-tags">
+                                        <span class="project-tag">HTML</span>
+                                        <span class="project-tag">CSS</span>
+                                        <span class="project-tag">PHP</span>
+                                        <span class="project-tag">SQL</span>
+                                    </div>
                                 </div>
-                            </div>
-                        </article>
+                            </article>
+                        </a>
                     </div>
                 </div>
             </section>
