modification du css pour la page index.html et 3d.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>CosmoDev Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="shorcute icon" href="asset/galaxie-logo.png">
 </head>
 <body>
     <div class="hero-section">
@@ -20,19 +21,22 @@
                                 <span class="brand-name-accent">Dev</span>
                             </div>
                             <div class="nav-links">
-                                <a href="#accueil" class="nav-link">Accueil</a>
-                                <a href="#projets" class="nav-link">Projets</a>
-                                <a href="#competences" class="nav-link">Compétences</a>
+                                <a href="#accueil" class="hover-underline">Accueil</a>
+                                <a href="#projets" class="hover-underline">Projets</a>
+                                <a href="#competences" class="hover-underline">Compétences</a>
+                                <a href="#contact" class="hover-underline">Contact</a>
                             </div>
                         </div>
                     </div>
                 </nav>
                 <div class="hero-text-container">
                     <div class="hero-text-wrapper">
-                        <h1 class="hero-heading">
-                            <span class="hero-heading-light">TACCHI </span>
-                            <span class="hero-heading-accent">Antonin</span>
-                        </h1>
+                        <div class="masking-container">
+                            <h1 class="masked-text">
+                                <span class="hero-heading-light">TACCHI </span>
+                                <span class="hero-heading-accent">Antonin</span>
+                            </h1>
+                        </div>
                         <p class="hero-subheading">Développeur full-stack créant des expériences web stellaires</p>
                         <div class="hero-buttons">
                             <a href="#projets" class="nav-link"><button class="primary-button">Voir Mes Projets WEB</button></a>
