--- a/3D.html
+++ b/3D.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CosmoDev Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shorcute icon" href="asset/galaxie-logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -20,19 +21,21 @@
                                 <span class="brand-name-accent">Dev</span>
                             </div>
                             <div class="nav-links">
-                                <a href="#accueil" class="nav-link">Accueil</a>
-                                <a href="#projets" class="nav-link">Projets</a>
-                                <a href="#contact" class="nav-link">Contact</a>
+                                <a href="#accueil" class="hover-underline">Accueil</a>
+                                <a href="#projets" class="hover-underline">Projets</a>
+                                <a href="#contact" class="hover-underline">Contact</a>
                             </div>
                         </div>
                     </div>
                 </nav>
                 <div class="hero-text-container">
                     <div class="hero-text-wrapper">
-                        <h1 class="hero-heading">
-                            <span class="hero-heading-light">TACCHI </span>
-                            <span class="hero-heading-accent">Antonin</span>
-                        </h1>
+                        <div class="masking-container">
+                            <h1 class="masked-text">
+                                <span class="hero-heading-light">TACCHI </span>
+                                <span class="hero-heading-accent">Antonin</span>
+                            </h1>
+                        </div>
                         <p class="hero-subheading">Développeur full-stack créant des expériences web stellaires</p>
                         <div class="hero-buttons">
                             <a href="index.html"><button class="primary-button">Voir Mes Travaux WEB</button></a>
@@ -152,6 +155,7 @@
                                     <textarea id="message" name="message" class="form-textarea" required></textarea>
                                 </div>
                                 <button type="submit" class="submit-button">Envoyer le Message</button>
+                                <p>le formulaire ne fonctionne pas malheureusement. :(</p>
                             </form>
                         </div>
                     </div>
