ajout d'un projet sur la page index.html

--- a/index.html
+++ b/index.html
@@ -87,6 +87,21 @@
                                 </div>
                             </article>
                         </a>
+                        <a href="https://antonin-tacchi.students-laplateforme.io" target="_blank">
+                            <article class="project-card">
+                                <img src="asset/quizouille.png" alt="page d'acceuil d'un fan-site sur nekfeu" class="project-image">
+                                <div class="project-content">
+                                    <h3 class="project-title">Quizouille</h3>
+                                    <p class="project-description">Un site de quiz en ligne dans lequel on puet créer ses propre quiz et jouer au quiz des autres personnes</p>
+                                    <div class="project-tags">
+                                        <span class="project-tag">HTML</span>
+                                        <span class="project-tag">CSS</span>
+                                        <span class="project-tag">PHP</span>
+                                        <span class="project-tag">SQL</span>
+                                    </div>
+                                </div>
+                            </article>
+                        </a>
                     </div>
                 </div>
             </section>
